# libgbm

./: .gitignore  Makefile.am  README  backend.c  common_drm.h  configure.ac  gbm.c  gbm.pc.in  gbmint.h  loader.c  loader.h
debian/: changelog  control  rules
debian/patches/: 0001-update-pkgconfig-file.patch  0002-Update-to-libudev.pc-name.patch  series
